--- a/www/src/App.css
+++ b/www/src/App.css
@@ -35,8 +35,18 @@
 
 .card {
   padding: 2em;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
 }
 
 .read-the-docs {
   color: #888;
+}
+
+.create-user-form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
